# xorg-bionic-android

app/: build.gradle
app/src/jni/: Android.mk  Application.mk  count  definitions.mk  run_x  xorg.conf
app/src/jni/DeviceTreeBuild/: Android.mk
app/src/jni/NdkBuild/: Android.mk
app/src/jni/NdkBuild/libEGL_hybris/: Android.mk  Makefile.am  config.h  configure.ac  egl.c  egl.pc.in
app/src/jni/NdkBuild/libEGL_hybris/include/: Makefile.am  binding.h
app/src/jni/NdkBuild/libEGL_hybris/include/cutils/: ashmem.h
app/src/jni/NdkBuild/libEGL_hybris/include/system/: graphics.h
app/src/jni/NdkBuild/openssl/crypto/: Android.mk
app/src/jni/NdkBuild/openssl/ssl/: Android.mk
app/src/jni/expat/: Android.mk
app/src/jni/fontconfig-2.12.93/: Android.mk
app/src/jni/freetype/: Android.mk
app/src/jni/libX11-1.6.6/: Android.mk
app/src/jni/libX11-1.6.6/support/: mbtowc.c
app/src/jni/libXau-1.0.8/: Android.mk
app/src/jni/libXdmcp-1.1.2/: Android.mk
app/src/jni/libXfont2-2.0.3/: Android.mk
app/src/jni/libepoxy/: Android.mk
app/src/jni/libpciaccess-0.14/: Android.mk
app/src/jni/libpng/: Android.mk
app/src/jni/libuuid/: Android.mk
app/src/jni/libxcb-1.13/: Android.mk
app/src/jni/libxkbfile-1.0.9/: Android.mk
app/src/jni/libxshmfence-1.3/: Android.mk  config.h
app/src/jni/minzip/: Android.mk  DirUtil.c  DirUtil.h  Zip.c  Zip.h
app/src/jni/mtdev-1.1.5/: Android.mk
app/src/jni/native_app_glue/: Android.mk
app/src/jni/openssl/crypto/: Android.mk
app/src/jni/pixman/: Android.mk
app/src/jni/pixman/pixman/: Android.mk
app/src/jni/pthread-stubs-0.3/: Android.mk
app/src/jni/xf86-input-libdlinput/: Android.mk  config.h  dummy-input.c  dummy-input.h
app/src/jni/xf86-video-libandroid/: Android.mk  config.h
app/src/jni/xf86-video-libandroid/src/: display.c  driver.c  driver.h  nativeactivity.c  renderer.c
app/src/jni/xkbcomp-1.4.2/: Android.mk
app/src/jni/xorg-server-1.20.1/: Android.mk
app/src/jni/xorg-server-1.20.1/Xext/: Android.mk  security.c
app/src/jni/xorg-server-1.20.1/Xi/: Android.mk
app/src/jni/xorg-server-1.20.1/android/: Android.mk  android.c  assets.c
app/src/jni/xorg-server-1.20.1/composite/: Android.mk
app/src/jni/xorg-server-1.20.1/config/: Android.mk
app/src/jni/xorg-server-1.20.1/damageext/: Android.mk
app/src/jni/xorg-server-1.20.1/dbe/: Android.mk
app/src/jni/xorg-server-1.20.1/dix/: Android.mk  stubmain.c
app/src/jni/xorg-server-1.20.1/fb/: Android.mk  fbimage.c
app/src/jni/xorg-server-1.20.1/hw/: Android.mk
app/src/jni/xorg-server-1.20.1/hw/xfree86/: sdksyms.c
app/src/jni/xorg-server-1.20.1/hw/xfree86/common/: compiler.h  xf86AutoConfig.c  xf86Build.h  xf86Config.c  xf86Helper.c  xf86Init.c
app/src/jni/xorg-server-1.20.1/hw/xfree86/os-support/: xf86_OSlib.h
app/src/jni/xorg-server-1.20.1/include/: dix-config.h  version-config.h  xkb-config.h  xorg-config.h  xorg-server.h
app/src/jni/xorg-server-1.20.1/mi/: Android.mk
app/src/jni/xorg-server-1.20.1/miext/: Android.mk
app/src/jni/xorg-server-1.20.1/os/: Android.mk  connection.c  inputthread.c  log.c  utils.c
app/src/jni/xorg-server-1.20.1/present/: Android.mk
app/src/jni/xorg-server-1.20.1/randr/: Android.mk
app/src/jni/xorg-server-1.20.1/record/: Android.mk
app/src/jni/xorg-server-1.20.1/render/: Android.mk
app/src/jni/xorg-server-1.20.1/xfixes/: Android.mk
app/src/jni/xorg-server-1.20.1/xkb/: Android.mk  ddxLoad.c
app/src/main/: AndroidManifest.xml
app/src/main/java/org/x/android/: MainActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
